set height for wheelpicker-item element

--- a/src/WheelPicker.scss
+++ b/src/WheelPicker.scss
@@ -74,6 +74,7 @@
     }
     &-item {
         cursor: pointer;
+        height: 34px;
         line-height: 34px;
         text-align: center;
         overflow: hidden;
